Completed single-threaded Cuda EMD.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(quist)
 
 find_package(Boost REQUIRED)
-find_package(CUDA REQUIRED)
+find_package(CUDA 4.2 REQUIRED)
 
 include_directories(${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR} ${BOOST_INCLUDES})
 
