--- a/emd/cuda/CMakeLists.txt
+++ b/emd/cuda/CMakeLists.txt
@@ -3,4 +3,6 @@ project(emd_cuda)
 
 INCLUDE(FindCUDA)
 
+set(CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20")
+
 CUDA_ADD_EXECUTABLE(emd emd.cu)
