--- a/emd/cuda/CMakeLists.txt
+++ b/emd/cuda/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20")
 CUDA_ADD_EXECUTABLE(emd emd.cu)
 CUDA_ADD_EXECUTABLE(dsemd dsemd.cu)
 CUDA_ADD_EXECUTABLE(spline spline.cu)
+CUDA_ADD_EXECUTABLE(scan scan.cu)
