Added recursive doubling algorithm for solving tridiag.

--- a/emd/cuda/CMakeLists.txt
+++ b/emd/cuda/CMakeLists.txt
@@ -9,3 +9,4 @@ CUDA_ADD_EXECUTABLE(emd emd.cu)
 CUDA_ADD_EXECUTABLE(dsemd dsemd.cu)
 CUDA_ADD_EXECUTABLE(spline spline.cu)
 CUDA_ADD_EXECUTABLE(scan scan.cu)
+CUDA_ADD_EXECUTABLE(tridiag tridiag.cu)
