Added CUDA version of EMD. Imported CRPCR for solving tridiagonal matrix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ include_directories(${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR} ${BOOST_INCLUDES
 add_executable(quist main.cpp)
 target_link_libraries(quist boost_program_options)
 
-add_subdirectory(bla/test)
-add_subdirectory(emd/test)
-add_subdirectory(emd/cuda)
+add_subdirectory(numeric/test)
+add_subdirectory(signal/test)
+add_subdirectory(signal/cuda)
