Disable tests on Windows. HDF5 is not supported for MinGW on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,16 @@ cmake_minimum_required(VERSION 3.7)
 project(quist)
 
 find_package(Boost REQUIRED)
-#find_package(CUDA 4.2 REQUIRED)
 
 include_directories(${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR} ${BOOST_INCLUDES})
 
 add_executable(quist main.cpp)
 target_link_libraries(quist boost_program_options)
 
-add_subdirectory(numeric/test)
-add_subdirectory(signal/test)
+if (NOT WIN32)
+    add_subdirectory(numeric/test)
+    add_subdirectory(signal/test)
+endif (NOT WIN32)
+
+#find_package(CUDA 4.2 REQUIRED)
 #add_subdirectory(signal/cuda)
